testdata/invalid/purefun_invalid_01.lisp
;;error:4:25-27:unknown symbol
(defcolumns (A :i16))
;;(defpurefun (dd x) x)
(defconstraint test () (dd A))
